hphp/test/slow/enum_supertyping/bad_conflict_siblings.php.expectf
Fatal error: F cannot inherit the constant A from E2, because it was previously inherited from E1 in %s/bad_conflict_siblings.php on line 12
